examples/emissary-crd-example.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdemos
spec:
  selector:
    matchLabels:
      app: nginxdemos
  replicas: 1
  template:
    metadata:
      labels:
        app: nginxdemos
    spec:
      containers:
        - name: nginxdemos
          image: nginxdemos/hello:0.3
          ports:
            - name: nginxdemos
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginxdemos
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: nginxdemos
  selector:
    app: nginxdemos
