examples/ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: "nginx"
spec:
  #ingressClassName: nginx
  rules:
    - host: sugardon.com
      http:
        paths:
          - path: /example
            pathType: Prefix
            backend:
              service:
                name: example-ingress-nginx-service
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: example-ingress-nginx-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: example
  selector:
    app: example-ingress-nginx-deployment

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-ingress-nginx-deployment
spec:
  selector:
    matchLabels:
      app: example-ingress-nginx-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: example-ingress-nginx-deployment
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - name: example
              containerPort: 80
