examples/ingress.yaml
# Usage
#
# $ kubectl apply -f examples/ingress.yaml
# $ curl -i "http://${IP ADDRESS}:${PORT}/example" -H "Host: sugardon.com"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  # Use emissary ingress
  ingressClassName: emissary
  rules:
    - host: sugardon.com
      http:
        paths:
          - path: /example
            pathType: Prefix
            backend:
              service:
                name: example-ingress
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: example-ingress
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: nginxdemos
  selector:
    app: example-ingress

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-ingress
spec:
  selector:
    matchLabels:
      app: example-ingress
  replicas: 1
  template:
    metadata:
      labels:
        app: example-ingress
    spec:
      containers:
        - name: nginxdemos
          image: nginxdemos/hello:0.3
          ports:
            - name: nginxdemos
              containerPort: 80
